Update SqlDelightWorkerTask.kt
Suppress "WARNING: A terminally deprecated method in sun.misc.Unsafe has been called".